--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,8 @@
-
-
 //Variables
 @import "./partials/variables/variables";
+//Mixins
+@import "./partials/mixins/mixins";
+//Extends
+@import "./partials/extends/extends";
 //Pages
 @import "./partials/pages/home";
